[project]
name = "pymingledb"
version = "1.0.0"
description = "Lightweight file-based NoSQL engine (Python port of mingleDB). BSON + zlib, schema, query operators, auth."
readme = "README.md"
authors = [
    { name = "Mark Wayne Menorca", email = "marcuwynu23@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
